# ChatBotProxy

./: .env.sample  .gitignore  README.md  pyproject.toml  requirements.txt
ChatBotProxy/: __init__.py  app.py  gunicorn_config.py  run_gunicorn.py
ChatBotProxy/main_engine/: import_docu.py  query_ollama.py  sample_answer.md  utils.py
ChatBotProxy/templates/: index.html  index_questions.html
